docs/7.52/md/abenabap_examples.md
---
title: "ABAP Examples"
description: |
  2(#2) A(#A) B(#B) C(#C) D(#D) E(#E) F(#F) G(#G) H(#H) I(#I) J(#J) L(#L) M(#M) N(#N) O(#O) P(#P) Q(#Q) R(#R) S(#S) T(#T) U(#U) V(#V) W(#W) X(#X) 2  2048 Game(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abengame_2048_abexa.htm) A  ABAP
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_examples.htm"
abapFile: "abenabap_examples.htm"
keywords: ["select", "insert", "update", "delete", "loop", "do", "if", "case", "try", "catch", "method", "class", "data", "types", "internal-table", "field-symbol", "exception-handling", "abenabap", "examples"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) → 

ABAP Examples

[2](#2) [A](#A) [B](#B) [C](#C) [D](#D) [E](#E) [F](#F) [G](#G) [H](#H) [I](#I) [J](#J) [L](#L) [M](#M) [N](#N) [O](#O) [P](#P) [Q](#Q) [R](#R) [S](#S) [T](#T) [U](#U) [V](#V) [W](#W) [X](#X)
2
[
2048 Game](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abengame_2048_abexa.htm)
A
[
ABAP as HTTP Client](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenicf_client_abexa.htm)[
ABAP CDS - Joins of Associations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_assoc_join_abexa.htm)[
ABAP CDS, Annotation Array](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_annotation_array_abexa.htm)[
ABAP CDS, Evaluation of Annotations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_semantics_annotation_abexa.htm)[
ABAP Objects, Classes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenclass_abexa.htm)[
ABAP Objects, Events](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenevents_abexa.htm)[
ABAP Objects, Friendship](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfriends_abexa.htm)[
ABAP Objects, Inheritance](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninheritance_abexa.htm)[
ABAP Objects, Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninterface_abexa.htm)[
ABAP Objects, OO Transaction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenoo_transaction_abexa.htm)[
ABAP Objects, Overview](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_objects_abexa.htm)[
Access to the MIME Repository Using ICF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenicf_mime_pictures_abexa.htm)[
Accessing the MIME Repository from HTTP Service](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenhttp_mime_pictures_abexa.htm)[
ADBC, Bulk Access](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadbc_dml_ddl_bulk_abexa.htm)[
ADBC, DDL, and DML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadbc_dml_ddl_abexa.htm)[
ADBC, Parameter Binding](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadbc_dml_ddl_binding_abexa.htm)[
ADBC, Prepared Statement](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadbc_sql_prepared_abexa.htm)[
ADBC, Query](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadbc_query_abexa.htm)[
ADBC, Stored Procedure](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadbc_procedure_abexa.htm)[
ADF, Creating and Using an ABAP Daemon](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_daemon_abexa.htm)[
ADF, Mini ABAP Daemon](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_mini_daemon_abexa.htm)[
AMC, Receiving Messages](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamc_receive_abexa.htm)[
AMC, Sending Messages](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamc_send_abexa.htm)[
AMC, Suppressing Standalone Messages](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamc_suppress_echo_abexa.htm)[
AMDP, Access to ABAP Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_abap_types_abexa.htm)[
AMDP, Access to Database Schemas](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_db_schema_abexa.htm)[
AMDP, AMDP Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_functions_abexa.htm)[
AMDP, AMDP Method with Specified Service Connection](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_connection_abexa.htm)[
AMDP, AMDP Methods in Interfaces and Superclasses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_polymorphism_abexa.htm)[
AMDP, Calling an AMDP Procedure from SQLScript](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_call_amdp_abexa.htm)[
AMDP, Calling an SQLScript Procedure from AMDP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_call_abexa.htm)[
AMDP, Comparison of SQLScript with Open SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_vs_open_sql_abexa.htm)[
AMDP, Filling a Mesh with SQLScript](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_amdp_abexa.htm)[
AMDP, Implementation of a SQLScript Procedure](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_abexa.htm)[
AMDP, Implementation of an L Procedure](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_l_abexa.htm)[
AMDP, SQL Script with Tabular CHANGING Parameter](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_changing_abexa.htm)[
APC, AS ABAP as Attached Client](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenapc_attached_client_abexa.htm)[
APC, AS ABAP as TCP Socket Client](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenapc_tcp_client_abexa.htm)[
APC, AS ABAP as WebSocket Client](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenapc_ws_client_abexa.htm)[
APC, AS ABAP as WebSocket Server](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenapc_abexa.htm)[
APC, Creating a Detached Client](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenapc_detached_client_abexa.htm)[
APC, System-Wide Access](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenapc_connect_via_handle_abexa.htm)[
Arithmetic Calculations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendivisions_abexa.htm)[
asXML, Deserialization of Structure Components](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_asxml_asjson_empty_abexa.htm)[
asXML, Mapping of Anonymous Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_data_object_abexa.htm)[
asXML, Mapping of Elementary Data Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_elementary_abexa.htm)[
asXML, Mapping of Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_object_abexa.htm)[
asXML, Mapping of Qualified Names](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_qnames_abexa.htm)[
asXML, Mapping of Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_structure_abexa.htm)[
asXML, Mapping of Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_table_abexa.htm)[
asXML, Mapping of UUIDs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xslt_mapping_abexa.htm)[
asXML, Mapping of XML Fragments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_fragments_abexa.htm)[
asXML, Transformation ID vs. Simple Transformation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenasxml_id_vs_st_abexa.htm)
B
[
Bit function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbit_func_abexa.htm)
C
[
Call Dialog Module](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_dialog_abexa.htm)[
Calling an HTTP Service](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenicf_service_abexa.htm)[
Calling an HTTP Service Using the POST Method](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenicf_post_service_abexa.htm)[
Calling Function Modules](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_function_abexa.htm)[
Calling Lists from Within Screen Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenleave_to_list_proc_abexa.htm)[
Case Distinction CASE TYPE OF for Exceptions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencase_type_of_exception_abexa.htm)[
Case Distinction CASE TYPE OF for RTTI](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencase_type_of_rtti_abexa.htm)[
CDS Metadata Extensions with CDS Variants](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_annotate_view_abexa.htm)[
CDS Views, Client Handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_client_handling_abexa.htm)[
CDS Views, Obsolete Client Handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_client_handling_obs_abexa.htm)[
Chaining Strings](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_concatenation_abexa.htm)[
Changing Multiple Rows in Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_modify_abexa.htm)[
Changing Single Rows in Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_modify_table_abexa.htm)[
Character String Functions, cmax, cmin and segment](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencmax_cmin_function_abexa.htm)[
Character String Templates, Alignments, and Padding](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_align_abexa.htm)[
Character String Templates, Date Formats](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_date_abexa.htm)[
Character String Templates, Number Formats](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_number_abexa.htm)[
Character String Templates, Time Formats](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_time_abexa.htm)[
Checkpoints and checkpoint groups](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencheckpoint_abexa.htm)[
CL\_ABAP\_CORRESPONDING for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corr_itab_abexa.htm)[
CL\_ABAP\_CORRESPONDING for Nested Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corr_struc_abexa.htm)[
CL\_ABAP\_CORRESPONDING for Simple Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corr_dyn_abexa.htm)[
CL\_ABAP\_CORRESPONDING for Tabular Components](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corr_deep_abexa.htm)[
CL\_ABAP\_CORRESPONDING with Lookup Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corr_lookup_abexa.htm)[
Client-Specific CDS Table Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_func_client_dep_abexa.htm)[
Comparing Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencompare_table_abexa.htm)[
Comparing Text Strings of Different Length](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_comparison_abexa.htm)[
Comparison with Selection Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlog_exp_in_abexa.htm)[
Component Operator for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_itab_abexa.htm)[
Component Operator for Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_struct_abexa.htm)[
Component Operator for Table Expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_table_exp_abexa.htm)[
Component Operator, Comparison with FOR Expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_vs_for_abexa.htm)[
Component Operator, Handling Duplicates](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_duplicates_abexa.htm)[
Component operator, lookup table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_using_abexa.htm)[
Component Operator, Mapping Rule](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_mapping_abexa.htm)[
Component Operator, Nested Mapping Rule](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_deep_mapp_abexa.htm)[
Component Operator, Reflexive Assignment](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_using_self_abexa.htm)[
Conditional Operator, Type Inference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencond_type_inference_abexa.htm)[
Contexts, message handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencontext_message_abexa.htm)[
Control Level Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenint_table_at_abexa.htm)[
Control Level Processing for Unsorted Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenint_table_at_unsorted_abexa.htm)[
Control Level Processing with Nested Groups](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenint_table_sum_abexa.htm)[
Conversion Costs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenconversion_costs_abexa.htm)[
Conversion of Integer Numbers to Bytes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenconversion_int_to_hex_abexa.htm)[
Conversion Operator, Enumerated Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenconv_enum_abexa.htm)[
Conversion Operator, Type Inference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenconv_type_inference_abexa.htm)[
Conversion Rules for Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendata_conv_str_abexa.htm)[
Converting a Classic Example to a Class-Based Exception](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenraise_message_glbl_shrt_abexa.htm)[
Converting the Exception error\_message to a Class-Based Exception](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenraise_error_message_shrt_abexa.htm)[
Converting Time Stamps](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenconvert_time_stamp_abexa.htm)[
Creating a Class Instance as a Shared Object](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencreate_shared_object_abexa.htm)[
Creating a Data Object as a Shared Object](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencreate_shared_data_objct_abexa.htm)[
Creating a Matrix Using FOR and VALUE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencond_iteration_matrix_abexa.htm)[
Creating a Structure Using RTTC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencreate_data_via_rttc_abexa.htm)[
Creating Data Objects with Implicit Type](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencreate_data_implicit_abexa.htm)[
Creating Elementary Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencreate_simple_data_abexa.htm)[
Creating Reference Variables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencreate_reference_abexa.htm)[
Creating Structured Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencreate_structured_data_abexa.htm)[
Creating Tables Using FOR and VALUE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencond_iteration_value_abexa.htm)[
Creating Tabular Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencreate_tabular_data_abexa.htm)[
Creating Values with FOR and REDUCE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencond_iteration_reduce_abexa.htm)[
Cross-Client CDS Table Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_func_client_indep_abexa.htm)
D
[
Decimal Floating Point Numbers, Formatting with STYLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenwrite_style_abexa.htm)[
Declaration of a Nested Structure](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennested_structure_abexa.htm)[
Declaration of a Simple Structure](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensimple_structure_abexa.htm)[
Deep Data Objects, Memory Consumption](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmemory_usage_abexa.htm)[
Deleting Multiple Rows in Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_delete_abexa.htm)[
Deleting Single Rows in Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_delete_table_abexa.htm)[
Deriving LOB Handle Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentypes_lob_handle_abexa.htm)[
Deserializing Empty Elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_deserl_empt_elem_abexa.htm)[
Deserializing Missing Elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_deserl_no_elem_abexa.htm)[
Determining Data Object Distances](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendescribe_distance_abexa.htm)[
Determining Data Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrtti_data_type_abexa.htm)[
Determining Elementary Data Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendescribe_field_abexa.htm)[
Determining Object Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrtti_object_type_abexa.htm)[
Dynamic RFC Destination](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_dynamic_dest_abexa.htm)[
Dynamic Selections](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfree_selection_abexa.htm)[
Dynpros, Automatic Input Checks](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_auto_check_abexa.htm)[
Dynpros, Field Help](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_f1_help_abexa.htm)[
Dynpros, Fields with Reference to ABAP Dictionary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_dict_abexa.htm)[
Dynpros, Holding Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_hold_data_abexa.htm)[
Dynpros, HTML Browser](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenhtml_browser_abexa.htm)[
Dynpros, HTML from the MIME Repository](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmime_html_abexa.htm)[
Dynpros, Images in HTML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmime_pictures_abexa.htm)[
Dynpros, Input Checks in the Flow Logic](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_check_flow_abexa.htm)[
Dynpros, Input in HTML File](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenhtml_input_abexa.htm)[
Dynpros, List Box with Value List from Input Help](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_drop1_abexa.htm)[
Dynpros, Simple Module Calls](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_simple_module_abexa.htm)[
Dynpros, Splitter Control](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_splitter_control_abexa.htm)[
Dynpros, Strings](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_strings_abexa.htm)[
Dynpros, Subscreens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_subscreen_abexa.htm)[
Dynpros, Tabstrips with Scrolling on the Application Server](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentab_strip_control2_abexa.htm)
E
[
Enumerated Objects, Deserialization](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenum_deserialization_abexa.htm)[
Enumerated Objects, Type Description](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenum_description_abexa.htm)[
Enumerated Objects, Use](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenum_usage_abexa.htm)[
Evaluating Date Fields and Time Fields](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendate_time_abexa.htm)[
Exception Handling in RFC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_exceptions_abexa.htm)[
Exceptions - CATCH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencatch_exception_abexa.htm)[
Exceptions, RAISE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenraise_abexa.htm)[
Exceptions, TRY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentry_abexa.htm)[
EXEC SQL, Accessing a Database Function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexec_sql_db_function_abexa.htm)[
EXEC SQL, Use](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennative_sql_abexa.htm)[
Extracts - Ascertaining Numbers and Totals](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenextract_sum_abexa.htm)[
Extracts, Control Level Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenextract_group_abexa.htm)[
Extracts, Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenextract_at_abexa.htm)[
Extremum functions nmax, nmin](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennmax_nmin_function_abexa.htm)
F
[
Field Symbols - Casting](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencasting_imp_exp_abexa.htm)[
Field Symbols, ASSIGN INCREMENT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenassign_increment_abexa.htm)[
Field Symbols, Cast Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfield_symbols_struc_abexa.htm)[
Field Symbols, Casting Decimal Places](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencasting_obsolete_dec_abexa.htm)[
Field Symbols, Casting Predefined Data Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencasting_obsolete_type_abexa.htm)[
Field Symbols, Dynamic Structure Components](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenassign_component_abexa.htm)[
Filling a Structure](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstructure_filling_abexa.htm)[
Floating Point Numbers, Arithmetic Calculations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfloating_point_numbers_abexa.htm)[
FOR Expressions for Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_for_abexa.htm)[
Forward Associations in Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_for_forward_abexa.htm)
G
[
Generic and Complete Typing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentyping_abexa.htm)[
Global Temporary Tables, Access](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_gtt_abexa.htm)
H
[
Host Expressions, Use in the WHERE Condition](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenhost_expr_in_where_cond_abexa.htm)
I
[
Identity Transformation to the asXML Format](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenxslt_abexa.htm)[
IF\_T100\_DYN\_MSG for Exception error\_message](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenraise_error_message_abexa.htm)[
IF\_T100\_DYN\_MSG in a Global Exception Class](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenraise_message_global_abexa.htm)[
IF\_T100\_DYN\_MSG in a Local Exception Class](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenraise_message_abexa.htm)[
IF\_T100\_DYN\_MSG in a Regular Class](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenif_t100_dyn_msg_abexa.htm)[
IF\_T100\_MESSAGE for Exception with Message](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmessage_interface_reuse_abexa.htm)[
IF\_T100\_MESSAGE in Global Exception Class](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmessage_interface_global_abexa.htm)[
IF\_T100\_MESSAGE in Local Exception Class](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmessage_interface_abexa.htm)[
IF\_T100\_MESSAGE in Regular Class](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenif_t100_message_abexa.htm)[
Implicit Logon Data in RFC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_logon_data_abexa.htm)[
Inheritance Events](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenevent_inheritance_abexa.htm)[
Inner, Outer, and Cross Joins](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenjoins_abexa.htm)[
INSERT, FROM SELECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninsert_from_select_abexa.htm)[
Insertions in Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_insert_abexa.htm)[
Integer Power Function ipow](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenipow_function_abexa.htm)[
Internal Table, Append Rows](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenappend_lines_abexa.htm)[
Internal Table, Grouping with FOR for Aggregates](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfor_group_by_aggregates_abexa.htm)[
Internal Table, Grouping with FOR for Sorts](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfor_group_by_sort_abexa.htm)[
Internal Table, Grouping with FOR Using Column Values](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfor_group_by_values_abexa.htm)[
Internal Tables - Deleting Duplicate Rows](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendelete_dup_lines_abexa.htm)[
Internal Tables - Deleting Rows Using the Index](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendelete_line_idx_abexa.htm)[
Internal Tables, Deleting Rows Using WHERE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendelete_itab_using_key_abexa.htm)[
Internal Tables, Grouping with FOR in Control Levels](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfor_group_by_levels_abexa.htm)[
Internal Tables, Grouping with FOR in Overlaps](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfor_group_by_overlap_abexa.htm)[
Internal Tables, Grouping with FOR in Packages](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfor_group_by_packages_abexa.htm)[
Internal Tables, Grouping with FOR Using a Comparison](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfor_group_by_comparison_abexa.htm)[
Internal Tables, Grouping with FOR Using a Function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfor_group_by_func_abexa.htm)[
Internal Tables, Grouping with FOR Using a Method](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfor_group_by_method_abexa.htm)[
Internal Tables, Grouping with FOR, Nesting](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfor_group_by_lvls_nst_abexa.htm)[
Internal Tables, Grouping with LOOP and FOR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_for_abexa.htm)[
Internal Tables, Grouping with LOOP and Sort](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_sort_abexa.htm)[
Internal Tables, Grouping with LOOP for Aggregates](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_aggregates_abexa.htm)[
Internal Tables, Grouping with LOOP in Control Levels](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_levels_abexa.htm)[
Internal Tables, Grouping with LOOP in Overlaps](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_overlap_abexa.htm)[
Internal Tables, Grouping with LOOP in Packages](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_packages_abexa.htm)[
Internal Tables, Grouping with LOOP Using a Comparison](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_comparison_abexa.htm)[
Internal Tables, Grouping with LOOP Using a Function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_func_abexa.htm)[
Internal Tables, Grouping with LOOP Using a Method](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_method_abexa.htm)[
Internal Tables, Grouping with LOOP Using Column Values](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_values_abexa.htm)[
Internal Tables, Grouping with LOOP, Explicit and Implicit](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_explicit_abexa.htm)[
Internal Tables, Grouping with LOOP, Nesting](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_lvls_nst_abexa.htm)[
Internal Tables, Grouping with LOOP, Output Behavior](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_at_group_abexa.htm)[
Internal tables, index assess with key specification](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmodify_itab_using_key_abexa.htm)[
Internal Tables, Index Function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenline_index_abexa.htm)[
Internal Tables, Inserting Rows](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninsert_lines_abexa.htm)[
Internal tables, Introduction to LOOP AT GROUP BY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_abexa.htm)[
Internal Tables, Key Accesses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenread_itab_using_key_abexa.htm)[
Internal Tables, Loop with Key Specified](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_at_itab_key_abexa.htm)[
Internal Tables, Nested Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennested_internal_tables_abexa.htm)[
Internal Tables, Output Area](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenread_table_abexa.htm)[
Internal Tables, Random Grouping with LOOP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenloop_group_by_random_abexa.htm)[
Inverse Associations in Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_for_inverse_abexa.htm)[
Inverse Reads on Internal Table with FOR](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninverse_itab_for_abexa.htm)[
iXML Library, Access to Adjacent Subnodes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_child_nodes_abexa.htm)[
iXML Library, Access to Attributes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_attributes_abexa.htm)[
iXML Library, Access Using a Node List](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_node_list_abexa.htm)[
iXML Library, Access Using Name](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_node_names_abexa.htm)[
iXML Library, Creating Nodes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_crea_elem_abexa.htm)[
iXML Library, Creating Simple Elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_crea_simple_elem_abexa.htm)[
iXML Library, DOM Representation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_dom_abexa.htm)[
iXML Library, Down Casts](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_casting_abexa.htm)[
iXML Library, Filter for Iterator](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_filter_iterator_abexa.htm)[
iXML Library, Iterator for Attributes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_attributes_iterator_abexa.htm)[
iXML Library, Iterator for Element List](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_name_list_iterator_abexa.htm)[
iXML Library, Iterator for Node List](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_node_list_iterator_abexa.htm)[
iXML Library, Iterator for Nodes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_node_iterator_abexa.htm)[
iXML Library, Modify XML Documents](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_modify_dom_abexa.htm)[
iXML Library, Object-Oriented Rendering](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_oo_rendering_abexa.htm)[
iXML Library, Parse to DOM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_parsing_abexa.htm)[
iXML Library, Render](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_render_abexa.htm)[
iXML Library, Sequential Parsing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_sequential_parsing_abexa.htm)[
iXML Library, Token Parsers and Renderers, Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_parse_render_tk_tab_abexa.htm)[
iXML Library, Token Parsers and Renders, Iterative](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenixml_parse_render_token_abexa.htm)
J
[
Jawbreaker](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenjaw_breaker_abexa.htm)[
JSON, asJSON (General)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_hello_json_abexa.htm)[
JSON, asJSON for Additional XML Schema Data Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_xsd_abexa.htm)[
JSON, asJSON for Anonymous Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_dref_abexa.htm)[
JSON, asJSON for Elementary ABAP Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_elem_abexa.htm)[
JSON, asJSON for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_table_abexa.htm)[
JSON, asJSON for Object References](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_oref_abexa.htm)[
JSON, asJSON for Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_struc_abexa.htm)[
JSON, Create from XML Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml_to_json_abexa.htm)[
JSON, Identity Transformation with JSONWriter as Target](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenjson_trafo_id_abexa.htm)[
JSON, Object Components in JSON-XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_xml_abexa.htm)[
JSON, Parse](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_oo_reader_abexa.htm)[
JSON, Render](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_token_writer_abexa.htm)[
JSON, Simple Transformation for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_st_json_table_abexa.htm)[
JSON, Simple Transformation for Name Attributes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_st_json_table_attr_abexa.htm)[
JSON, Transformation to HTML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_to_html_abexa.htm)[
JSON, Transforming Names](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_names_to_upper_abexa.htm)
L
[
LET Expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlet_abexa.htm)[
Lists, Dialog Boxes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlist_window_abexa.htm)[
Lists, HIDE Technique](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlist_hide_abexa.htm)[
Lists, Line Elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlist_line_elements_abexa.htm)[
Lists, Page Header](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlist_top_of_page_abexa.htm)[
Lists, Page Layout](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlist_pages_abexa.htm)[
Lists, Supported Colors](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlist_format_color2_abexa.htm)[
Lists, Using Colors](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlist_format_color_abexa.htm)[
Locator, Access to Column Content](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendb_locator_abexa.htm)[
Locator, Copy Column](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendb_copy_abexa.htm)[
Logical Database, Associated with a Program](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenreport_abexa.htm)[
Logical Database, Call by Function Module](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlogical_database_abexa.htm)[
Loops Across Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_loops_abexa.htm)[
Lossless Assignment](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmove_exact_abexa.htm)[
Lossless Calculations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencompute_exact_abexa.htm)
M
[
Macros](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmacro_abexa.htm)[
Mesh Path Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_table_expressions_abexa.htm)[
Method Chaining](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmethod_chaining_abexa.htm)[
Minesweeper](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmine_sweeper_abexa.htm)[
Modified Serialization and Deserialization](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenserializable_object_abexa.htm)[
MODIFY FROM TABLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbulk_modify_abexa.htm)[
MOVE-CORRESPONDING for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmove_corresponding_abexa.htm)[
MOVE-CORRESPONDING for Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmove_corresponding_struc_abexa.htm)[
Multiple Joins](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenjoin_joins_abexa.htm)
N
[
Numerical Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmath_func_abexa.htm)
O
[
Open SQL, parameter passing to CDS view](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselect_cds_para_abexa.htm)
P
[
Parallel asynchronous RFC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenparallel_rfc_abexa.htm)[
Pass by Parameter](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprocedure_param_abexa.htm)[
Pass by Parameter in sRFC and aRFC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_parameters_abexa.htm)[
Path Expressions, Use in the FROM Clause](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpath_expr_in_from_clause_abexa.htm)[
Path Expressions, Use in the SELECT List.](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpath_expr_in_colspec_abexa.htm)[
Persistence Service](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_persist_abexa.htm)[
Predicate Expression IS INSTANCE OF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninstance_of_abexa.htm)[
Predicate Expression IS NOT BOUND](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbound_abexa.htm)[
Predicate Function, matches](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpred_function_matches_abexa.htm)[
Predicative Method Calls](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpredicative_method_call_abexa.htm)[
Program Calls, Filling the Selection Screen](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensubmit_selscreen_abexa.htm)[
Program Calls, Influencing the Basic List](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensubmit_list_abexa.htm)[
Program Generation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_generation_abexa.htm)
Q
[
Query Service](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_query_abexa.htm)
R
[
Reader Stream, Read Database Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendb_reader_abexa.htm)[
Reading Data Through the Cursor](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopen_cursor_abexa.htm)[
Reduce Operator, Type Inference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenreduce_type_inference_abexa.htm)[
Reflexive Associations in Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_for_reflex_sngl_abexa.htm)[
Reflexive Component Assignments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenreflexive_corresponding_abexa.htm)[
Regular Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenregex_abexa.htm)[
Relational Operators for Character-Like Data Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencharacter_comparisons_abexa.htm)[
Replacement Object for Database Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_replacement_object_abexa.htm)[
Rounding Function round](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenround_function_abexa.htm)[
Runtime Measurement of Database Reads](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenget_run_time_abexa.htm)
S
[
SAP HANA, ABAP-Specific Session Variables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenhana_session_variables_abexa.htm)[
SAP HANA, Cached Views](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenhana_cached_views_abexa.htm)[
SAP HANA, Call Database Procedure](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_hana_db_proc_abexa.htm)[
SAP HANA, Currency Conversion with SQLScript](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_script_curr_conv_abexa.htm)[
SAP HANA, Database Procedure Proxy](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_db_procedure_abexa.htm)[
SAP HANA, from ADBC to AMDP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfrom_adbc_to_amdp_abexa.htm)[
SAP Locks, Set and Release](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenqueue_abexa.htm)[
SAP LUW, ON COMMIT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_luw_on_commit_abexa.htm)[
SAP LUW, UPDATE TASK](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_luw_update_task_abexa.htm)[
Screens, CFW](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_cfw_abexa.htm)[
Screens, CFW Events](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_custom_control_abexa.htm)[
Screens, Checkboxes and Radio Buttons](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_radio_button_abexa.htm)[
Screens, Conditional Module Call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_on_cond_abexa.htm)[
Screens, Context Menus](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_context_menu_abexa.htm)[
Screens, Determinig the Cursor Position](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_set_cursor_abexa.htm)[
Screens, Determining the Cursor Position](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_get_cursor_abexa.htm)[
Screens, Dynamic Screen Modification](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_mod_simple_abexa.htm)[
Screens, FIELD Statement](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_field_abexa.htm)[
Screens, GUI Status and Function Codes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_gui_status_abexa.htm)[
Screens, Input Checks in Dialog Modules](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_field_chain_abexa.htm)[
Screens, Input Help in Dialog Modules](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_f4_help_dial_abexa.htm)[
Screens, Input Help of the ABAP Dictionary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_f4_help_dic_abexa.htm)[
Screens, List Box with Value List from PBO Module](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_drop2_abexa.htm)[
Screens, Processing Input and Output Fields](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_in_out_field_abexa.htm)[
Screens, Pushbuttons](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_push_button_abexa.htm)[
Screens, Screen Input Help](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_f4_help_dyn_abexa.htm)[
Screens, Screen Sequences](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_flow_abexa.htm)[
Screens, Status Icons](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_status_icons_abexa.htm)[
Screens, Tabstrips with scrolling in the SAP GUI](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentab_strip_control1_abexa.htm)[
Screens, Text output](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentext_output_abexa.htm)[
Screens, Unconditional Module Call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_at_exit_comm_abexa.htm)[
SELECT, Dynamic ORDER-BY Clause](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynamic_order_by_abexa.htm)[
SELECT, Dynamic Token Specification](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynamic_sql_abexa.htm)[
SELECT, Inline Declarations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselect_inline_decl_abexa.htm)[
SELECT, Restriction of the Rows in the Results Set](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselect_up_to_offset_abexa.htm)[
SELECT, Union for Building a Ranges Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendemo_union_ranges_abexa.htm)[
SELECT, Union of CDS View with Input Parameters](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselect_union_cds_para_abexa.htm)[
SELECT, Union of Multiple Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselect_union_abexa.htm)[
SELECT, Union with Aggregate Expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselect_union_sum_abexa.htm)[
SELECT, Union with Global Temporary Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselect_union_sum_gtt_abexa.htm)[
Selection Screens as Subscreens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_subscreen_abexa.htm)[
Selection Screens in Tabstrips](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_tabstrip_abexa.htm)[
Selection Screens, Basic Form of Selection Criteria](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_sel_opt_abexa.htm)[
Selection screens, call standalone selection screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_call_sel_scr_abexa.htm)[
Selection Screens, Changing the Default GUI Status](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_gui_status_abexa.htm)[
Selection Screens, Default Values for Selection Criteria](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_sel_opt_def_abexa.htm)[
Selection Screens, Display Properties for Parameters](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_param_screen_abexa.htm)[
Selection screens, dynamic Dictionary reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_dyn_dict_abexa.htm)[
Selection Screens, Field Help](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_f1_help_abexa.htm)[
Selection Screens, Input Help](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_f4_help_abexa.htm)[
Selection screens, processing blocks and radio buttons](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_at_sel_on_abexa.htm)[
Selection Screens, Pushbuttons](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_button_abexa.htm)[
Selection Screens, Pushbuttons in the Application Toolbar](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselscreen_pb_bar_abexa.htm)[
Selection Screens, Value Properties of Parameters](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_param_value_abexa.htm)[
Serialization to Heap or Embedded](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenserialize_ref_heap_embed_abexa.htm)[
Serializing Data References](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenserialize_dref_abexa.htm)[
Set Operations with Bit Sequences](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendata_bit_abexa.htm)[
Setting Associations for Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_set_association_abexa.htm)[
Setting the Text Environment](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenset_locale_abexa.htm)[
Shared Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshared_objects_abexa.htm)[
Simple Transformation, Example of an ST Program](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_program_abexa.htm)[
Simple Transformation, Formatting Options](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_format_option_abexa.htm)[
Simple Transformation, Internal Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_table_abexa.htm)[
Simple Transformation, Mapping of XML Fragments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_xsdany_abexa.htm)[
Simple Transformation, Method Call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmethod_call_from_st_abexa.htm)[
Simple Transformation, Option for Decimal Places](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_decimals_option_abexa.htm)[
Simple Transformation, Option for Invalid Values](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_noerror_option_abexa.htm)[
Simple Transformation, Option for Regime](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_regime_option_abexa.htm)[
Simple Transformation, Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_structure_abexa.htm)[
Simple Transformation, tt:value](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_value_abexa.htm)[
Sorting Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensort_stable_abexa.htm)[
Sorting Internal Tables Alphabetically](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensort_text_abexa.htm)[
Sorting Internal Tables Dynamically](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensort_itab_exp_abexa.htm)[
Sorting Internal Tables with Secondary Keys](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensort_itab_sec_key_abexa.htm)[
Spooling Lists](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprint_list_abexa.htm)[
SQL Expressions, Arithmetic Calculations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_expr_arith_abexa.htm)[
SQL Expressions, Cast Expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_expr_cast_abexa.htm)[
SQL Expressions, coalesce Function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_expr_coalesce_abexa.htm)[
SQL Expressions, Complex CASE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_expr_searched_case_abexa.htm)[
SQL Expressions, Constant in SELECT List](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_expr_literal_abexa.htm)[
SQL Expressions, Simple CASE and Chainings](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_expr_case_string_abexa.htm)[
SQL Expressions, String Functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_string_func_abexa.htm)[
SQL Expressions, Use in Aggregate Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_expr_in_aggregates_abexa.htm)[
SQL Expressions, Use in the WHERE Condition](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_expr_in_where_cond_abexa.htm)[
SQL Expressions, Use with GROUP BY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_expr_with_group_by_abexa.htm)[
SQL Function UPPER](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensql_function_upper_abexa.htm)[
Step Loop](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensteploop_abexa.htm)[
String Functions, count, find, and match](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_function_find_abexa.htm)[
String Functions, distance](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_function_distance_abexa.htm)[
String Functions, escape for HTML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_function_escape_abexa.htm)[
String Functions, escape for XSS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_function_esc_xss_abexa.htm)[
String Functions, shift and substring](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_function_shift_abexa.htm)[
String Functions, to\_mixed and from\_mixed](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_function_mixed_abexa.htm)[
String Templates, Algebraic Sign](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_sign_abexa.htm)[
String Templates, asXML Format](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_xsd_abexa.htm)[
String Templates, Case](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_case_abexa.htm)[
String Templates, Control Characters](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_ctrlchar_abexa.htm)[
String Templates, Formatting Settings](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_user_abexa.htm)[
String Templates, Length](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_width_abexa.htm)[
String Templates, Numeric Texts](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_alpha_abexa.htm)[
String Templates, Time Zones](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_template_timezone_abexa.htm)[
Structure from ABAP Dictionary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendictionary_structure_abexa.htm)[
Subquery in WHERE Condition](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselect_subquery_abexa.htm)[
Subscreens on Selection Screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_with_subscr_abexa.htm)[
Substrings](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendata_process_fields_abexa.htm)[
sXML Library, Formats](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_formats_abexa.htm)[
sXML Library, Methods for Token-Based Parsing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_parsing_methods_abexa.htm)[
sXML Library, Modify XML Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_reader_writer_abexa.htm)[
sXML Library, Namespace Declarations in Token-Based Rendering](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_renderering_ns_abexa.htm)[
sXML Library, Object-Oriented Parsing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_oo_parsing_abexa.htm)[
sXML Library, Steps in Token-Based Parsing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_parsing_steps_abexa.htm)[
sXML Library, Token-Based Parsing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_parsing_abexa.htm)[
sXML Library, Token-Based Rendering](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_rendering_abexa.htm)[
sXML Library, Transformation from XML Reader](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_trafo_from_reader_abexa.htm)[
sXML Library, Transformation of Formats](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_format_trafos_abexa.htm)[
sXML Library, Transformation to an XML Writer](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_trafo_into_writer_abexa.htm)
T
[
Table Builds Using Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_build_abexa.htm)[
Table Comprehensions, Basic Properties](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_cmprhnsns_simple_abexa.htm)[
Table Comprehensions, Join](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_cmprhnsns_join_abexa.htm)[
Table Comprehensions, Local Auxiliary Fields](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_cmprhnsns_locals_abexa.htm)[
Table Comprehensions, Multiple FOR Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_cmprhnsns_for_for_abexa.htm)[
Table Comprehensions, Multiple Rows](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_cmprhnsns_lines_abexa.htm)[
Table Control with Modifications](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_control2_abexa.htm)[
Table Control with Scrolling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_control1_abexa.htm)[
Table Expressions, Chainings](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_exp_chaining_abexa.htm)[
Table Expressions, Default Value](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_exp_default_abexa.htm)[
Table Expressions, Side Effects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_exp_side_effect_abexa.htm)[
Table Expressions, Specified Rows](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_exp_itab_line_abexa.htm)[
Table Expressions, Writer Positions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_exp_itab_changing_abexa.htm)[
Table Filtering, Filter Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfilter_table_abexa.htm)[
Table Filtering, Filter Table.](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfilter_table_condition_abexa.htm)[
Table Filtering, Single Values](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfilter_value_condition_abexa.htm)[
Table Reductions, Method Calls](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenreduce_method_call_abexa.htm)[
Table Reductions, Multiple FOR Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenreduce_for_for_abexa.htm)[
Table Reductions, String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenreduce_text_abexa.htm)[
Table Reductions, Structured Result](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenreduce_structured_abexa.htm)[
Table Reductions, Summation of an Array](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenreduce_simple_abexa.htm)[
Tabstrip Controls on Selection Screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensel_screen_with_tabstrip_abexa.htm)[
Transaction Call, BDC Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_transaction_bdc_abexa.htm)[
Transaction Call, Dialog Transaction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_transaction_dialog_abexa.htm)[
Transaction Call, Report Transaction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_transaction_repo_abexa.htm)[
Transaction Call, SPA/GPA Parameters](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_transaction_abexa.htm)[
Transaction Service](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_abexa.htm)[
Transformation of XML Element Names](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_trafo_upper_lower_abexa.htm)[
Transformation of XML Syntax Characters](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_trafo_escaping_abexa.htm)
U
[
UPDATE, Use of SET](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenupdate_set_abexa.htm)[
User Dialogs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenscreen_abexa.htm)
V
[
VALUE - Operator for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvalue_itab_abexa.htm)[
VALUE - Operator with LET for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvalue_itab_let_abexa.htm)[
Value Operator, Type Inference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvalue_type_inference_abexa.htm)[
Value Ranges of Packed Numbers](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentype_p_value_range_abexa.htm)[
Virtual Sorting of an Internal Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvirtual_sort_simple_abexa.htm)[
Virtual Sorting of an Internal Table with Filters](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvirtual_sort_filter_abexa.htm)[
Virtual Sorting of Flight Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvirtual_sort_flights_abexa.htm)[
Virtual Sorting of Two Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvirtual_sort_combined_abexa.htm)
W
[
WITH, Aggregation for Join Set](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenwith_agg_union_abexa.htm)[
WITH, Client Handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenwith_client_handling_abexa.htm)[
WITH, Common Table Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenwith_cte_abexa.htm)[
WRITE, Cutoff Behavior](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenwrite_cutoff_abexa.htm)[
Writer Stream, Fill Database Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendb_writer_abexa.htm)
X
[
XML Sources of Transformations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_trafo_sources_abexa.htm)[
XML Targets of Transformations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencall_trafo_results_abexa.htm)